<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brianmannresearch.smartcamera.MainActivity">

    <LinearLayout
        android:id="@+id/EditText"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/LoginName"
            android:hint="@string/username_prompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/Password"
            android:hint="@string/password_prompt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_below="@id/EditText"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/LoginButton"
            android:text="@string/login_button"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/RegisterButton"
            android:text="@string/register_button"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/GuestButton"
            android:text="@string/guest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/ExitButton"
            android:text="@string/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/StatusText"
        android:layout_below="@id/Buttons"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
